# OS-Proyecto1

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
common/: CMakeLists.txt  helloWorld.c  helloWorld.h  imageChunk.c  linkedList.c  metadata_table.c  shared_memory.c  statistic_memory.c
common/include/: constants.h  imageChunk.h  linkedList.h  metadata_table.h  shared_memory.h  statistic_memory.h  types.h
decoder/: CMakeLists.txt  decoder.c  init.c
encoder/: CMakeLists.txt  encoder.c  init.c  main.c
encoder/include/: encoder.h
test/unit_tests/common/: CMakeLists.txt  image_chunk_semaphore_test.c  linked_list_on_shared_memory_test.c  linked_list_test.c  metadata_table_test.c  shared_memory_tests.c
visualizer/: CMakeLists.txt  Makefile  constants.h  functions  functions.c  init.c  mmapTest  mmapTest.c  structs.h  test2  test2.c  visualizer  visualizer.c
visualizer/include/: visualizer.h
visualizer/lib/: constants.h  functions.h  structs.h
